--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -66,4 +66,7 @@ conky.config = {
 conky.text = [[
 ${font Big John:size=90}
 ${time %H:%M}
+${if_match "${execi 0.5 playerctl status}" == "Playing"}\
+${voffset -60}${font GE Inspira Bold:size=18}${execpi 0.5 playerctl metadata --format "{{title}} by {{artist}}"}
+${endif}
 ]]
