--- a/picom.conf
+++ b/picom.conf
@@ -62,12 +62,13 @@ shadow-offset-y = -7;
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+   "name = 'Notification'",
+   "class_g = 'Conky'",
+   "override_redirect",  # Fix conky
+   "class_g ?= 'Notify-osd'",
+   "class_g = 'Cairo-clock'",
+   "_GTK_FRAME_EXTENTS@:c"
+ ];
 
 # Specify a X geometry that describes the region in which shadow should not
 # be painted in, such as a dock window region. Use 
@@ -368,7 +369,16 @@ use-damage = true
 #
 # log-level = "debug"
 log-level = "warn";
-
+ntypes:
+{
+ dock = { shadow = false; };
+ dnd = { shadow = false; };
+ tooltip = { shadow = false; };
+ menu        = { opacity = false; };
+ dropdown_menu = { opacity = false; };
+ popup_menu    = { opacity = false; };
+ utility       = { opacity = false; };
+};
 # Set the log file.
 # If *--log-file* is never specified, logs will be written to stderr. 
 # Otherwise, logs will to written to the given file, though some of the early 
@@ -418,6 +428,7 @@ wintypes:
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
+  # popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
 };
+
