--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod1
+set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -37,6 +37,13 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play-pause
+# bindsym XF86AudioPause exec playerctl pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -45,6 +52,12 @@ bindsym $mod+Return exec TERMINAL=alacritty i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
+
+set $bg-color 	         "#2f343f"
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
@@ -177,14 +190,28 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+# bar {
+# 	position top
+#         status_command i3status
+# 	font pongo: Ubuntu Mono 20
+# 	colors{
+# 		background #232323
+# 		statusline #DCDCDC
+# 	}
+# }
+
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 #### Thorvald's edit ####
 exec_always feh --bg-fill ~/Pictures/Wallpapers/atat_and_r2d2_i3.png
-gaps inner 20
+gaps inner 10
 exec --no-startup-id picom
 exec --no-startup-id /usr/bin/setxkbmap -option "ctrl:nocaps"
-exec redshift-gtk -l 59.91273:10.74609
-exec conky
+exec --no-startup-id redshift-gtk -l 59.91273:10.74609
+exec --no-startup-id conky
+bindsym $mod+Ctrl+l exec source $HOME/.config/i3/scripts/lock.sh # i3lock
+
+for_window [class="spotify"] default_border none
+default_border none
+exec_always --no-startup-id setxkbmap -layout us,no
+bindsym $mod+p exec --no-startup-id xkblayout-state set +1
